<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:padding="@dimen/common_padding_default"
    tools:context=".view.LoginActivity">

    <!-- guideline es una línea de guía par el constraintlayout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="439dp"
        android:layout_marginBottom="292dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterLogin"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_registration"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginLogin"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:icon="@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgotLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Material3.Button.TextButton"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPasswordLogin"
        android:layout_width="@dimen/width_default"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        app:helperText="@string/helperText_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnForgotLogin"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailLogin"
        android:layout_width="@dimen/width_default"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_email"
        app:endIconMode="clear_text"
        app:helperText="@string/helperText_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilPasswordLogin"
        app:startIconDrawable="@drawable/ic_contact_mail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="187dp"
        android:layout_height="153dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tilEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logocompletosinfondo" />

</androidx.constraintlayout.widget.ConstraintLayout>