<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:padding="16dp"
    tools:context=".view.ResetPasswordActivity">

    <!-- guideline es una línea de guía par el constraintlayout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineReset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="439dp"
        android:layout_marginBottom="292dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.625"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginReset"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetReset"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:icon="@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailReset"
        android:layout_width="@dimen/width_default"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_email"
        app:endIconMode="clear_text"
        app:helperText="@string/helperText_email_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnResetReset"
        app:startIconDrawable="@drawable/ic_contact_mail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="187dp"
        android:layout_height="153dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tilEmailReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logocompletosinfondo" />

</androidx.constraintlayout.widget.ConstraintLayout>